# panoptic

./: .dockerignore  .env.example  .gitignore  Dockerfile  NEXT_STEPS.md  STATUS.md  TODO.md  alembic.ini  docker-compose.yml  image_ingest_enrichment_spec.md  pyproject.toml
deploy/frpc/: frpc.service  frpc.toml.template  install.sh
deploy/logrotate/: panoptic.conf
docs/: AGENT.md  AUTH_DESIGN.md  FAILURE_MODES.md  M12.md  M1_RESULTS.md  OBSERVABILITY_DESIGN.md  OPERATOR_UI.md  RECLAIMER_DESIGN.md  REPORTS.md  RESTORE.md  RETENTION.md  SCALING.md  TRAILER_AUTH_HANDOFF.md  panoptic-push.md
infra/: frpc.example.toml
infra/migrations/: env.py
scripts/: _signed_post.py  add_trailer.py  backfill_events.py  dashboard.sh  dev_duplicate_flood.py  dev_fake_trailer.py  dev_idempotency_test.py  dev_reclaim_test.py  dlq_inspect.py  dlq_replay.py  generate_reports.py  health_watch.py  install_logrotate.sh  prune_images.py  prune_jobs.py  prune_reports.py  query_summaries.py  rederive_markers.py  reembed_captions.py  reembed_images.py  reembed_summaries.py  replay_buckets.py  revoke_trailer.py  run_all.sh  seed_synthetic.py  sign_request.py  tmux-dev.sh  watch_trailer.sh
services/: multi_camera_summary.py
services/panoptic_agent/: __init__.py  agent.py  app.py  citations.py  client.py  prompts.py  server.py  tools.py
services/panoptic_caption_embed_worker/: executor.py  worker.py
services/panoptic_embedding_worker/: executor.py  worker.py
services/panoptic_event_producer/: __init__.py  executor.py  worker.py
specs/: build_spec.md  design_spec.md
(+134 files in other folders)
