[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surveillx-vil"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic[email]>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "services*"]
